fix more compatibility issues